@@ -297,11 +297,11 @@ public class VirtuosoConnection implements Connection
    {
        Object[] ret = new Object[7];
        ret[0] = new String ("JDBC");
-       ret[1] = new Integer (0);
+       ret[1] = Integer.valueOf(0);
        ret[2] = new String ("");
        ret[3] = System.getProperty("os.name");
        ret[4] = new String ("");
-       ret[5] = new Integer (0);
+       ret[5] = Integer.valueOf(0);
        ret[6] = new String (con_delegate != null ? con_delegate : "");
        return ret;
    }
@@ -449,14 +449,14 @@ public class VirtuosoConnection implements Connection
      if (i < table.length())
        {
          client_charset_hash.put (
-      new Character (table.charAt(i)),
-      new Byte ((byte) (i + 1)));
+      Character.valueOf (table.charAt(i)),
+      Byte.valueOf ((byte) (i + 1)));
        }
      else
        {
          client_charset_hash.put (
-      new Character ((char) (i + 1)),
-      new Byte ((byte) (i + 1)));
+      Character.valueOf ((char) (i + 1)),
+      Byte.valueOf ((byte) (i + 1)));
        }
           }
       }
@@ -605,7 +605,7 @@ public class VirtuosoConnection implements Connection
   req_no += 1;
        }
      fut = new VirtuosoFuture(this,rpcname,args,this_req_no, timeout);
-     futures.put(new Integer(this_req_no),fut);
+     futures.put(Integer.valueOf(this_req_no),fut);
      return fut;
    }
    protected void clearFutures()
@@ -619,7 +619,7 @@ public class VirtuosoConnection implements Connection
    protected void removeFuture(VirtuosoFuture fut)
    {
      if (futures != null)
-       futures.remove(new Integer(fut.hashCode()));
+       futures.remove(Integer.valueOf(fut.hashCode()));
    }
    protected boolean read_request() throws IOException, VirtuosoException
    {
@@ -660,7 +660,7 @@ public class VirtuosoConnection implements Connection
   Object tag = result.firstElement();
   if(((Short)tag).shortValue() != VirtuosoTypes.DA_FUTURE_ANSWER && ((Short)tag).shortValue() != VirtuosoTypes.DA_FUTURE_PARTIAL_ANSWER)
     return false;
-  VirtuosoFuture fut = (VirtuosoFuture)futures.get(new Integer(((Number)result.elementAt(1)).intValue()));
+  VirtuosoFuture fut = (VirtuosoFuture)futures.get(Integer.valueOf(((Number)result.elementAt(1)).intValue()));
   if(fut == null)
     return false;
   fut.putResult(result.elementAt(2));
@@ -698,7 +698,7 @@ public class VirtuosoConnection implements Connection
      {
        try
   {
-    return (new Integer (version.substring (6, 10))).intValue();
+    return (Integer.valueOf(version.substring (6, 10))).intValue();
   }
        catch (Exception e)
   {
@@ -757,7 +757,7 @@ public class VirtuosoConnection implements Connection
       try
       {
  Object[] args = new Object[2];
- args[0] = new Long(VirtuosoTypes.SQL_COMMIT);
+ args[0] = Long.valueOf(VirtuosoTypes.SQL_COMMIT);
  args[1] = null;
  VirtuosoFuture fut = getFuture(VirtuosoFuture.transaction,args, this.timeout);
  openlink.util.Vector trsres = fut.nextResult();
@@ -825,7 +825,7 @@ public class VirtuosoConnection implements Connection
       try
       {
          Object[] args = new Object[2];
-         args[0] = new Long(VirtuosoTypes.SQL_ROLLBACK);
+         args[0] = Long.valueOf(VirtuosoTypes.SQL_ROLLBACK);
          args[1] = null;
          VirtuosoFuture fut = getFuture(VirtuosoFuture.transaction,args, this.timeout);
          openlink.util.Vector trsres = fut.nextResult();
